# libamaroke

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  main.c  manifest.json
.github/: FUNDING.yaml  dependabot.yaml  labels.yaml
.github/workflows/: commitlint.yaml  labeler.yaml
lib/: amaroke.c  amaroke.h
